--- a/css/design.css
+++ b/css/design.css
@@ -2,24 +2,6 @@ body {
     font-family: 'Noto Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media screen and (max-width:576px) {
-    body {
-        margin:1rem;
-    }
-}
-
-@media screen and (min-width:576px) and (max-width:992px) {
-    body {
-        margin:2rem 3rem;
-    }
-}
-
-@media screen and (min-width:992px) {
-    body {
-        margin:2rem 20%;
-    }
-}
-
 h1 {
     margin-top: 0px;
 }
@@ -27,19 +9,17 @@ h1 {
 table {
     width: 100%;
     border: 0px solid;
+    border-collapse: collapse;
     border-spacing: 0px;
-    border-radius: 1rem;
+}
+
+.table-div {
     padding:0.25rem 1rem 0.5rem 1rem;
+    border-radius: 1rem;
 }
 
-td {
-    border-bottom: 1px solid;
-    padding:0.5rem 0.5rem 0.5rem 1rem;
-}
-
-th {
+td,th {
     text-align: left;
-    padding:0.5rem 0.5rem 0.5rem 1rem;
     border-bottom: 1px solid;
 }
 
